# module3-deploying-a-scalable-ml-pipeline-in-production

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  live_post.py  main.py  model_card.md  pyproject.toml  render.yaml  requirements.txt
.dvc/: config
.github/workflows/: cicd.yml  validate.yml
model/: model.pkl  slice_performance.csv  slice_performance.html
tests/: test_model.py
tests/api/: api.py
tests/model/: test_data.py  test_model.py
train/: train_model.py
train/ml/: model.py
