[tool.poetry]
name = "module3-deploying-a-scalable-ml-pipeline-in-production"
version = "0.1.0"
description = ""
authors = ["giuliovn <giuliovnturi@gmail.com>"]
readme = "README.md"
packages = [{include = "module3_deploying_a_scalable_ml_pipeline_in_production"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
requests = "^2.28.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
joblib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
