[tool.poetry]
name = "module3-deploying-a-scalable-ml-pipeline-in-production"
version = "0.1.0"
description = ""
authors = ["giuliovn <giuliovnturi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
requests = "^2.28.2"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
joblib = "^1.2.0"
dvc = "^2.55.0"
dvc-s3 = "^2.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
